Click on planets and addet news

--- a/src/index.css
+++ b/src/index.css
@@ -39,7 +39,8 @@ h3 {
   transform: translate(-50%, -50%);
 }
 
-.sun {
+.Sun {
+  cursor: pointer;
 
   display: flex;
   position: absolute;
@@ -56,13 +57,14 @@ h3 {
   border-radius: 50%;
   
 }
-.mercury {
+.Mercury {
 
   display: flex;
   position: absolute;
   margin-top: 420px;
   left: 250px;
   
+  cursor: pointer;
   margin-left: auto;
   margin-right: auto;
   height: 50px;
@@ -71,13 +73,14 @@ h3 {
   border-radius: 50%;
   
 }
-.venus {
+.Venus {
 
   display: flex;
   position: absolute;
   margin-top: 300px;
   left: 370px;
   
+  cursor: pointer;
   margin-left: auto;
   margin-right: auto;
   height: 70px;
@@ -86,13 +89,14 @@ h3 {
   border-radius: 50%;
   
 }
-.earth {
+.Earth {
 
   display: flex;
   position: absolute;
   margin-top: 350px;
   left: 500px;
   
+  cursor: pointer;
   margin-left: auto;
   margin-right: auto;
   height: 120px;
@@ -102,13 +106,14 @@ h3 {
   
 }
 
-.mars {
+.Mars {
 
   display: flex;
   position: absolute;
   margin-top: 420px;
   left: 670px;
   
+  cursor: pointer;
   margin-left: auto;
   margin-right: auto;
   height: 60px;
@@ -118,13 +123,14 @@ h3 {
   
 }
 
-.jupiter{
+.Jupiter{
 
   display: flex;
   position: absolute;
   margin-top: 300px;
   left: 800px;
   
+  cursor: pointer;
   margin-left: auto;
   margin-right: auto;
   height: 150px;
@@ -133,13 +139,14 @@ h3 {
   border-radius: 50%;
   
 }
-.saturn{
+.Saturn{
 
   display: flex;
   position: absolute;
   margin-top: 420px;
   left: 1000px;
   
+  cursor: pointer;
   margin-left: auto;
   margin-right: auto;
   height: 120px;
@@ -148,13 +155,14 @@ h3 {
   border-radius: 50%;
   
 }
-.uranus{
+.Uranus{
 
   display: flex;
   position: absolute;
   margin-top: 320px;
   left: 1200px;
   
+  cursor: pointer;
   margin-left: auto;
   margin-right: auto;
   height: 90px;
@@ -163,13 +171,13 @@ h3 {
   border-radius: 50%;
   
 }
-.neptune{
+.Neptune{
 
   display: flex;
   position: absolute;
   margin-top: 420px;
   left: 1400px;
-  
+  cursor: pointer;
   margin-left: auto;
   margin-right: auto;
   height: 90px;
@@ -177,4 +185,97 @@ h3 {
   content:url('./images/neptune.png');
   border-radius: 50%;
   
+}
+
+.card {
+  background-color: white;
+  border-radius: 4px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  padding: 1rem;
+  width: 20rem;
+}
+
+
+.recentNews .news-title {
+  text-align:center;
+  padding-top:30px;
+  padding-bottom:30px;
+  font-family: 'nimbus-sans-condensed', sans-serif;
+  font-size:55px;
+  font-weight:bold;
+  color: #fff;
+}
+.recentNews .row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 30px;
+}
+.recentNews .ct-blog {
+  margin-bottom: 30px;
+}
+.ct-blog .inner {
+  background-color: #FFF;
+  padding: 10px;
+  transition: all 0.2s ease-in-out 0s;
+  cursor: pointer;
+  height: 100%;
+}
+.ct-blog .inner:hover {
+  background-color: #e6e6e6;
+}
+.ct-blog .fauxcrop {
+  height: 180px;
+  overflow: hidden;
+}
+.ct-blog .fauxcrop img {
+  width: 100%;
+}
+.ct-blog-content {
+  display: table;
+  padding: 30px 0 28px;
+}
+.ct-blog-content .ct-blog-date {
+  border-right: 1px solid #95A5A6;
+  display: table-cell;
+  font-family: "Lato", sans-serif;
+  padding: 0px 18px 0px 15px;
+  text-align: center;
+}
+.ct-blog-content .ct-blog-date span {
+  font-size: 16px;
+  color: rgb(20, 117, 175);  
+  font-weight: 700;
+  display: block;
+  line-height: 1;
+}
+.ct-blog-content .ct-blog-date strong {
+  font-size: 25px;
+  color: rgb(20, 117, 175);  
+}
+.ct-blog-content .ct-blog-header {
+  color: #000;
+  display: table-cell;
+  font-size: 22px;
+  font-weight: 700;
+  letter-spacing: -0.2px;
+  line-height: 1.1;
+  padding: 0 20px;
+  vertical-align: top;
+}
+.btn-news {
+  color: #333;
+  font-size: 14px;
+  font-weight: bold;
+  padding-bottom: 30px;
+  text-align: center;
+}
+.btn-news.btn-contests a {
+  color: #fff;
+  font-family: 'nimbus-sans-condensed', sans-serif;
+  font-size: 24px;
+  transition: all 0.2s ease-in-out 0s;
+}
+.btn-news.btn-contests a:hover {
+  color: #000;
 }
