--- a/src/components/app.css
+++ b/src/components/app.css
@@ -8,7 +8,7 @@
     font-family: inter;
     width: 100%;
     margin: 0 auto;
-    background: rgb(197, 197, 197);
+    background: rgb(255, 255, 255);
   }
   
   .all__news {
@@ -21,7 +21,7 @@
   
   .news {
     margin-left: 25px;
-    background: rgb(197, 197, 197);
+    background: rgb(255, 255, 255);
     max-width: 500px;
     padding: 20px;
     border: 1px solid lightgray;
@@ -47,6 +47,12 @@
   .news__author {
     margin-right: 10px;
     color: purple;
+  }
+
+  .link {
+    margin-right: 10px;
+    color: rgb(0, 23, 128);
+    cursor: pointer;
   }
   
   .news__published {
